tests/bug_detector_tests/StrictMode10_2_1_2_4.js
"use strict";
    var x;
    x + 3;
